# battlebot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  commands.txt  flash-linux.sh
.github/workflows/: unit-tests.yml
docs/: controller.md  wiring.md
foxglove/: .gitignore  README.md  repo-review.md
foxglove/layouts/: battlebot-dashboard.json
foxglove/mcap/: fake-match.mcap
foxglove/tools/: README.md  bridge.py  fake_sse_server.py  generate_fake_mcap.py  pyproject.toml
scripts/: build.ps1  build.sh  flash.ps1  flash.sh  net-debug.bat  net-debug2.bat  run_tests.sh
src/: main.c  test.c
src/bluetooth/: my_platform.c
src/config/: btstack_config.h  config.h  lwipopts.h  sdkconfig.h  secrets.h  secrets.h.example
src/hardware/: accelerometer.c  dht.c  dht.h  dht11.c  dht11.h  fan.c  fan.h  hw_config.c  imu.c  imu.h  motor.c  motor.h  motor_bi.c  motor_bi.h  motor_controller.c  motor_controller.h  motor_omni.c  motor_omni.h  motor_pwm_control.c  motor_pwm_control.h  sd_storage.c  sd_storage.h  temperaturesensor.c  temperaturesensor.h  utility.h
src/networking/: web_dashboard_page.c  web_dashboard_page.h  web_motor_test.c  web_motor_test.h  web_server.c  web_server.h  wifi_ap.c  wifi_ap.h
src/tools/: motor_test_main.c
tests/: CMakeLists.txt
tests/mocks/: mock_pico_hardware.h  secrets.h
tests/support/: mock_pico_hardware.c  test_helpers.h
tests/unit/: all_tests.c  test_motor.c  test_motor_controller.c  test_runner.c
