[project]
name = "battlebot-foxglove-tools"
version = "0.0.1"
description = "Foxglove integration tools for the Monster Book of Monsters battlebot"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "foxglove-sdk>=0.4.0",
    "aiohttp>=3.9",
    "mcap>=1.2",
]

[tool.uv]
package = false
